--- a/Projects/GiftOfTheSanctum/GiftOfTheSanctum.vcxproj
+++ b/Projects/GiftOfTheSanctum/GiftOfTheSanctum.vcxproj
@@ -65,6 +65,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
+    <PreBuildEvent>
+      <Command>node ../Zmey/prebuild.js $(OutputPath) --game</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -84,6 +87,9 @@
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
     </Link>
+    <PreBuildEvent>
+      <Command>node ../Zmey/prebuild.js $(OutputPath) --game</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zmey\Zmey.vcxproj">
