--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -116,6 +116,7 @@
     <ClInclude Include="..\..\include\Zmey\Components\ComponentRegistry.h" />
     <ClInclude Include="..\..\include\Zmey\Components\ComponentRegistryCommon.h" />
     <ClInclude Include="..\..\include\Zmey\Components\RectangleManager.h" />
+    <ClInclude Include="..\..\include\Zmey\Components\TagManager.h" />
     <ClInclude Include="..\..\include\Zmey\Components\TransformManager.h" />
     <ClInclude Include="..\..\include\Zmey\Config.h" />
     <ClInclude Include="..\..\include\Zmey\EngineLoop.h" />
@@ -183,6 +184,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\Source\Components\ComponentRegistry.cpp" />
     <ClCompile Include="..\..\Source\Components\RectangleManager.cpp" />
+    <ClCompile Include="..\..\Source\Components\TagManager.cpp" />
     <ClCompile Include="..\..\Source\Components\TransformManager.cpp" />
     <ClCompile Include="..\..\Source\EngineLoop.cpp" />
     <ClCompile Include="..\..\Source\EntityManager.cpp" />
