--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="..\..\include\Zmey\Components\ComponentManager.h" />
     <ClInclude Include="..\..\include\Zmey\Components\ComponentRegistry.h" />
     <ClInclude Include="..\..\include\Zmey\Components\ComponentRegistryCommon.h" />
+    <ClInclude Include="..\..\include\Zmey\Components\MeshComponentManager.h" />
     <ClInclude Include="..\..\include\Zmey\Components\RectangleManager.h" />
     <ClInclude Include="..\..\include\Zmey\Components\TagManager.h" />
     <ClInclude Include="..\..\include\Zmey\Components\TransformManager.h" />
@@ -202,6 +203,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\Components\ComponentRegistry.cpp" />
+    <ClCompile Include="..\..\Source\Components\MeshComponentManager.cpp" />
     <ClCompile Include="..\..\Source\Components\RectangleManager.cpp" />
     <ClCompile Include="..\..\Source\Components\TagManager.cpp" />
     <ClCompile Include="..\..\Source\Components\TransformManager.cpp" />
