Added projectiles and a bunch of other stuff neccessary to get projectiles working.

--- a/Games/GiftOfTheSanctum/zmeyconfig.ini
+++ b/Games/GiftOfTheSanctum/zmeyconfig.ini
@@ -1,4 +1,4 @@
 [InputController]
-Actions=movecam,LeftStickX,MouseX
-Actions=jump,FaceDown,Space
-Actions=walk,CONT+Shift+W,CONT+DpadUp
+Actions=WalkX,CONT+LeftStickX
+Actions=WalkZ,CONT+LeftStickY
+Actions=Cast,FaceDown
