--- a/Projects/Zmey/Zmey.vcxproj.filters
+++ b/Projects/Zmey/Zmey.vcxproj.filters
@@ -18,9 +18,6 @@
     <Filter Include="include\Memory">
       <UniqueIdentifier>{68e40dfd-8c59-4055-9bd6-98cd9687bdee}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include\Tasks">
-      <UniqueIdentifier>{ce5efd5e-8d37-4fbe-8abe-44bc8e7e78ad}</UniqueIdentifier>
-    </Filter>
     <Filter Include="include\Platform">
       <UniqueIdentifier>{153a696c-2b63-4f6f-87ab-7cd902b771da}</UniqueIdentifier>
     </Filter>
@@ -90,6 +87,12 @@
     <Filter Include="include\Physics">
       <UniqueIdentifier>{2005c030-ed70-4009-b76d-6b0c6e2d8ee0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\Job">
+      <UniqueIdentifier>{0678867f-71bb-4402-92d9-9b14f90f5f02}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Job">
+      <UniqueIdentifier>{40208c78-f4d6-4bae-bf9d-421d626fa26e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\Zmey\Config.h">
@@ -118,12 +121,6 @@
     </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Memory\StlAllocator.h">
       <Filter>include\Memory</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Zmey\Tasks\BlockingQueue.h">
-      <Filter>include\Tasks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Zmey\Tasks\TaskSystem.h">
-      <Filter>include\Tasks</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Platform\Platform.h">
       <Filter>include\Platform</Filter>
@@ -278,6 +275,15 @@
     <ClInclude Include="..\..\include\Zmey\Profile.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Job\JobSystem.h">
+      <Filter>include\Job</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Job\JobSystemImpl.h">
+      <Filter>include\Job</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Job\Queue.h">
+      <Filter>include\Job</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\EngineLoop.cpp">
@@ -378,6 +384,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Physics\PhysicsComponentManager.cpp">
       <Filter>Source\Physics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Job\JobSystemImpl.cpp">
+      <Filter>Source\Job</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
