Move logic from main to separated files.

--- a/Projects/GiftOfTheSanctum/GiftOfTheSanctum.vcxproj.filters
+++ b/Projects/GiftOfTheSanctum/GiftOfTheSanctum.vcxproj.filters
@@ -10,5 +10,13 @@
     <ClCompile Include="..\..\Games\GiftOfTheSanctum\Source\main.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Games\GiftOfTheSanctum\Source\GiftOfTheSanctumGame.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Games\GiftOfTheSanctum\Source\GiftOfTheSanctumGame.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
