Implement spawn points Fix bug in zmey export script Fix bug in mesh component manager

--- a/Games/GiftOfTheSanctum/zmeyconfig.ini
+++ b/Games/GiftOfTheSanctum/zmeyconfig.ini
@@ -1,4 +1,5 @@
 [InputController]
-Actions=WalkX,CONT+LeftStickX
-Actions=WalkZ,CONT+LeftStickY
-Actions=Cast,FaceDown
+Actions=WalkX0,CONT+LeftStickX
+Actions=WalkZ0,CONT+LeftStickY
+Actions=Cast0,Space
+
