--- a/Projects/Zmey/Zmey.vcxproj.filters
+++ b/Projects/Zmey/Zmey.vcxproj.filters
@@ -260,6 +260,9 @@
     <ClInclude Include="..\..\include\Zmey\Components\ProjectileComponent.h">
       <Filter>include\Components</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Physics\PhysicsActor.h">
+      <Filter>include\Physics</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Physics\PhysicsEngine.h">
       <Filter>include\Physics</Filter>
     </ClInclude>
@@ -371,6 +374,9 @@
       <Filter>Source\Physics</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\Physics\PhysicsComponentManager.cpp">
+      <Filter>Source\Physics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Physics\PhysicsActor.cpp">
       <Filter>Source\Physics</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\Job\JobSystemImpl.cpp">
